--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "contentlayer": "contentlayer build"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@next/mdx": "^14.0.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.5",
@@ -21,14 +19,12 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "lucide-react": "^0.300.0",
     "next": "^14.0.4",
-    "next-contentlayer": "^0.3.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,7 +35,6 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/mdx": "^2.0.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4"
   }
